@@ -1,5 +1,10 @@
 2019-04-05  Jonathan Wakely  <jwakely@redhat.com>
 
+	PR libstdc++/89986
+	* config/abi/pre/gnu.ver: Add missing exports.
+	* testsuite/27_io/filesystem/iterators/directory_iterator.cc: Test
+	increment member.
+
 	* config/abi/pre/gnu.ver: Export new symbols.
 	* include/bits/fs_dir.h (recursive_directory_iterator::options())
 	(recursive_directory_iterator::recursion_pending())
